--- a/204-grid/style.css
+++ b/204-grid/style.css
@@ -4,9 +4,9 @@ body{
     grid-template-areas: 'header header header header'
                          'navbar navbar navbar aside'
                          'section section section aside'
-                         'footer footer footer footer'; 
-    grid-template-rows: 50vh 20vh 60vh 40vh;
-    grid-gap: 15px;
+                         'footer footer footer aside'; 
+    grid-template-rows: 15vh 20vh 60vh 40vh;
+    grid-gap: 0px;
     
 }
 
@@ -14,7 +14,9 @@ header{
     grid-area: header;
     background-color: blue;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    
+
 }
 
 header img{
@@ -22,44 +24,63 @@ header img{
     border-radius: 100%;
 }
 
+
+
 nav{
     grid-area: navbar;
     background-color: red;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-around;  
+    
 
 }
-
-nav a {
+header a {
+    grid-area: header;
+    display: flex;
+    align-items: center;
     color: black;
     font-size: 20pt;
     text-decoration: none;
+
 }
 
-nav a:hover{
+header a:hover{
     text-decoration: underline;
 }
+header a:focus{
+    color: white;
+}
+
 
 section{
     grid-area: section;
     background-color: green;
-    background-image: url(girafa-wikimedia.jpg);
     background-size: cover;
 }
 
-aside{
+section img{
+    width: 500px;
+    margin:10px;
+}
+
+section div{
+    display: flex;
+    
+}
+
+aside{ 
     grid-area: aside;
     background-color: yellow;
-    background-image: url(_95189420_plate-1968011_1920.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: first baseline;
     align-items: center;
-}
+} 
 
-aside button{
+
+ aside button{
     margin-top: 20px;
     border: none;
     border-radius: 10px;
@@ -67,7 +88,7 @@ aside button{
     height: 20px;
 }
 
-aside input{
+ aside input{
     border: none;
     height: 30px;
     border-bottom: 2px black solid;
@@ -76,14 +97,19 @@ aside input{
     font-weight: 900;
 }
 
-aside input::placeholder{
+ aside input::placeholder{ 
     font-weight: 900;
     color: grey;
 }
 
-aside input:nth-child(3){
-    margin-top: 10px;
-}
+ aside input:nth-child(3){ 
+     margin-top: 10px;  
+ }
+
+ aside div{
+     display: flex;
+     justify-content: center;
+ }
 
 footer{
     grid-area: footer;
