--- a/204-grid/style.css
+++ b/204-grid/style.css
@@ -13,19 +13,15 @@ header {
     grid-area: header;
     display: flex;
     justify-content: space-around;
-    background-color: rgb(255, 180, 81);
-    border-bottom: rgb(97, 63, 18) 5px solid;
+    background-color: rgb(15, 15, 15);
+    border-bottom: rgb(0,0,0) 5px solid;
   
 }
 
-header img {
-    width: 500px;
-    border-radius: 100%;
-}
 
 nav {
     grid-area: navbar;
-    background-color: rgb(253, 193, 114);
+    background-color:rgb(34, 31, 31);
     display: flex;
     align-items: initial;
     justify-content:center;
@@ -34,14 +30,14 @@ nav {
 nav h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32;
-    color: black;
+    color: white;
 }
 
 header a {
     grid-area: header;
     display: flex;
     align-items: center;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 20pt;
     text-decoration: none;
 }
@@ -58,7 +54,7 @@ section {
     grid-area: section;
     display: flex;
     justify-content:space-around;
-    
+    background-color:black;
     
 
 }
@@ -76,19 +72,21 @@ div p{
     text-align: justify;
     word-wrap: break-word;
     font-size: 14px;
-    color: black;
+    color: rgb(0,0,0);
     font-family: Arial, Helvetica, sans-serif;
-    margin-right: 10px;
+    margin-right: px;
+    font-weight: bold;
 }
 
 section img{
-    border: solid 3px black;
-    margin: 10px;
+    border: solid 3px white;
+    margin-left: 10px;
     height: 400px;
     width: 500px;
     border-radius: 5%;
     margin-top: 60px;
-
+    margin-bottom: 10px;
+    
 }
 
 section div {
@@ -96,18 +94,27 @@ section div {
 }
 
 #div2{
-    border:2px solid rgba(0, 0, 0, 0.609);
+    border:2px solid white;
     border-radius: 5%;
+    background-color: red   ;
+    padding:10px;
+    margin-top: 55px;
+    margin-bottom: 23px;
 }
 
 aside {
     grid-area: aside;
-    background-color: rgba(79,79,47);
+    background-color:rgb(34, 31, 31);
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: first baseline;
     align-items: center;
+}
+
+aside h3{
+    color: white;
+    margin-top: 75px;
 }
 
 aside button {
@@ -121,9 +128,9 @@ aside button {
 aside input {
     border: none;
     height: 30px;
-    border-bottom: 2px black solid;
+    border-bottom: 2px white solid;
     background-color: transparent;
-    color: black;
+    color:white;
     font-weight: 900;
 }
 
@@ -143,12 +150,12 @@ aside div {
 
 footer {
     grid-area: footer;
-    background-color: rgb(211, 210, 211);
+    background-color: rgb(14, 13, 13);
     display: flex;
     align-items: center;
     justify-content: center;
-    border-right: solid 4px black;
-    border-top: 3px solid black     ; 
+    border-right: solid 4px white;
+    border-top: 3px solid white; 
 }
 
 footer div {
@@ -165,11 +172,16 @@ footer div {
    
 
 }
+
+#redes h3{
+    color: white;
+}
+
 #redes img{
     width: 50px;
     height: 50px;
     cursor: pointer;
-    border: solid black 2px;
+    border: solid white 2px;
     border-radius: 100%;
 }
 #img{
